tests/functional/cases/pass/test_file_deleted_keys.coil
testfile: 'general.coil'

test: {
  @file: [..testfile 'x']
  ~a ~b
}

expected: {
  c: 1
}
