tests/functional/cases/fail/test_file_import_noexist.coil
a: { @file: ['general.coil' 'a' 'b' 'bad_import_path'] }
